[tool.poetry]
name = "diplomacy-bot"
version = "0.1.0"
description = "A Discord bot for playing Diplomacy"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.0"
discord-py = "^2.2.2"
pillow = "^9.4.0"
diplomacy = {git = "https://github.com/diplomacy/diplomacy.git"}
cairosvg = "^2.7.0"
flask = "^2.2.3"
requests = "^2.28.2"
svglib = "^1.5.1"
reportlab = "^3.6.12"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
